Thu Mar 26 00:35:48 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/SubscriberList.pm: Add new 'warnings' and 'classarg2'
 	fields, for future use.

	* lib/Majordomo.pm (_list_file_get): Tweak to search /stock/en
 	last.  No more non-language-specific stock directories.

	* lib/Mj/FileSpace.pm (mkdir): New function.
	(_find_legal_files): Tweak to not add trailing slash to
 	directories.

	* lib/Mj/List.pm (fs_mkdir): New function.

	* lib/Majordomo.pm (_put): Make directories given appropriate
 	mode.

	* lib/Mj/TextOutput.pm (put): Deal with making directories.

Tue Mar 24 00:06:36 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/SubscriberList.pm: Added password and language fields for
 	future use.

	* lib/mj_cf_data.pl: Minor doc tweaks.
	
	* lib/Majordomo.pm (help_start): Call _list_file_get to get the
 	file instead of manipulating the list directly.

Mon Mar 23 02:30:29 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/MailOut.pm (deliver): Pay attention to
 	bounce_probe_frequency and calculate buckets accordingly.

	* lib/mj_cf_data.pl: Add bounce_probe_frequency and lame
 	explanation.

	* lib/mj_cf_defs.pl: Added bounce_probe_frequency defaulting off.

Sun Mar 22 13:40:31 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Resend.pm (_post): Implement sequence numbering.

	* lib/Majordomo.pm (_list_config_set): New function.

	* lib/mj_cf_data.pl: Add sequence_number variable.

	* lib/mj_cf_defs.pl: Add sequence_number default to 1.

Sat Mar 21 14:20:55 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Format.pm (index): Fix a typo.

	* lib/Majordomo.pm (_list_file_get): Many changes to implement
 	enhanced search functionality.
	(list_config_set_to_default): Broken from long ago.

	* lib/mj_cf_data.pl: New description.

	* lib/Mj/Config.pm (parse_list_array): Add colon-separated
 	comment/path goody.

	* lib/Mj/Resend.pm (_post): Args to _list_file_get changed.
