@@ -11,3 +11,4 @@ Makefile$
 \#.*\#
 .*.bak
 \.L.*
+TAGS
